# htv

./: .gitignore  CHAT_INTEGRATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  SUPABASE_INSERT_DATA.md  SUPABASE_INTEGRATION_COMPLETE.md  SUPABASE_QUICK_SETUP.md  SUPABASE_SETUP.md  env.example  package-lock.json  package.json  readme.md  tailwind.config.js
.next/: app-build-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
__tests__/: ghostBadge.test.ts  useDryness.test.ts
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
components/: AIBox.tsx  DraftCoachBanner.tsx  GhostBadge.tsx  MessageBubble.tsx  MetricCard.tsx  Sparkline.tsx  TopBar.tsx
components/ui/: badge.tsx  button.tsx
data/Bank 1 Data/: Bank1_Schema.xlsx
ey-td/: QUICKSTART.md  README.md  build_and_test.sh
ey-td/data/: schema.md
ey-td/game/: CMakeLists.txt  README.md
ey-td/game/src/: DataLoader.cpp  DataLoader.hpp  Enemy.cpp  Enemy.hpp  Map.cpp  Map.hpp  SceneGame.cpp  SceneGame.hpp  Tower.cpp  Tower.hpp  UI.cpp  UI.hpp  Utils.cpp  Utils.hpp  WaveManager.cpp  WaveManager.hpp  main.cpp
ey-td/game/src/Towers/: ArrearsRadar.cpp  ArrearsRadar.hpp  BalanceChecker.cpp  BalanceChecker.hpp  DuplicateDetector.cpp  DuplicateDetector.hpp  ExpiryScanner.cpp  ExpiryScanner.hpp
frontend/: README.md  env.example  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-with-autofill.tsx  insights-panel.tsx  invite-generator.tsx  login-form.tsx  sign-up-form.tsx
frontend/db/: schema.sql
frontend/lib/: README-database.md  add-mock-conversations.ts  autofill-service.ts  confetti.ts  conversation-insights-service.ts  database-service.ts  database-types.ts  demo-data-v2.ts  (+12 more)
hooks/: useDemoData.ts  useDryness.ts
lib/: gemini.ts  utils.ts
supabase/: insert_mock_conversations.sql  insert_mock_conversations_fixed.sql  insert_mock_data_step_by_step.sql  seed.sql  test_uuid_script.sql
(+79 files in other folders)
